

* added imputeMissing() function to impute missing values given an estimated mirt model. Useful
  for checking item and person fit diagnostics and obtaining overall model fit statistics

* allow for Rasch itemtype in multidimesional confirmatory models

* more flexible calculation of M2 statistic in fitIndicies(), with user prompt option if the internal
  variables grow too large and cause time/RAM problems

* mixedmirt() bug fix when COV argument supplied (reported by Aaron Kaat)

----------------------------------------------------------------
mirt 0.5.0
----------------------------------------------------------------

* all dichotomous, graded rating scale, (generalized) partial credit, rating scale, and nominal models 
  have been better optimized

* wald() will now support information matrices that contain constrained parameters

* confmirt.model() can accept a string inputs, which may be useful for knitr/sweave documents
  since the scan() function tends to hang

* multipleGroup() now has the logical options bfactor = TRUE to use the dimensional reduction algorithm 
  for when the factor pattern is structured like a bifactor model

* new fitIndices() function added to compute additional model fit statistics such as M2

* testinfo() function added for test information

* lower bound parameters under more stringent control during estimation and are bounded to never 
  be higher than .6

* infit and outfit stats in itemfit() now work for Rasch partial credit and rating scale models

* Rasch rating scale models can now be estimated with potential rsm.blocks (same as grsm model). 
  "Generalized" rating scale models can also be estimated, though this requires manipulating the 
  starting values directly

* added AICc and sample size adjusted BIC (SABIC) information statistics

* new mixedmirt() function for estimating IRT models with person and item level (e.g., LLTM) covariates.