@@ -14,6 +14,7 @@ export(itemplot)
 export(key2binary)
 export(mirt)
 export(mixedmirt)
+export(mod2values)
 export(multipleGroup)
 export(personfit)
 export(polymirt)
